Improve isBalanced